--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -167,9 +167,9 @@
      <div class="col-lg-6 col-md-6 col-sm-6"></div>
       <div class="col-lg-6 col-md-6 col-sm-6">
 
-               <button class="btn btn-lg btn-outline-secondary" style="height:100%;font-size:100%;width:30%;" action="/" type="button">Home</button>
-        <button class="btn btn-lg  btn-outline-secondary" style="height:100%;font-size:100%;width:30%;"  action="/upload"type="button">Post</button>
-<button class="btn btn-lg  btn-outline-secondary" style="height:100%;font-size:100%;width:30%;" action="/regalo" type="button">Regalo</button>
+               <button class="btn btn-lg btn-outline-secondary" style="height:100%;font-size:100%;width:30%;" onclick="window.location.href='/'" type="button">Home</button>
+        <button class="btn btn-lg  btn-outline-secondary" style="height:100%;font-size:100%;width:30%;" onclick="window.location.href='/upload'"type="button">Post</button>
+<button class="btn btn-lg  btn-outline-secondary" style="height:100%;font-size:100%;width:30%;" onclick="window.location.href='/regalo'" type="button">Regalo</button>
 
 
 
