--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -634,9 +634,9 @@ window.addEventListener('touchstart', function(e){
     }
   }
 
-  window.addEventListener("load", callbackFunc);
+  //window.addEventListener("load", callbackFunc);
   window.addEventListener("scroll", total);
-  window.addEventListener("scroll", callbackFunc);
+  //window.addEventListener("scroll", callbackFunc);
   
   var countDownDate = new Date("Jul 16, 2021 00:00:00").getTime();
 
