--- a/src/main/resources/templates/regalo.html
+++ b/src/main/resources/templates/regalo.html
@@ -408,7 +408,7 @@
 
 		<div class="col-lg-2 col-md-2 col-sm-2"></div>
             <div class="col-lg-8 col-md-8 col-sm-8">
-              <h1>Il pensiero più bello che possiate farci è essere con noi nel grande giorno Ma se gradite farci un regalo, preferiamo metterlo nel salvadanaio, e quando lo useremo in futuro, penseremo con gioia a voi ed al vostro gesto.</h1>
+              <h1>Il pensiero più bello che possiate farci è essere con noi nel grande giorno Ma se gradite farci un regalo, preferiamo metterlo nel salvadanaio, e quando lo useremo in futuro, penseremo con gioia a voi e al vostro gesto.</h1>
             </div>
 <div class="col-lg-2 col-md-2 col-sm-2"></div>
           </div>
@@ -448,73 +448,7 @@
     $("#schermata_caricamento").hide();
 	$("#time").hide();
   });
-function scrollFunction() {
-    $("#time").show();
-}
-function total() {
-   scrollFunction();
-callbackFunc();
-}
-//window.onscroll = total;
-window.addEventListener('touchstart', function(e){
-       $("#time").show();
-    }, false);
-  function isElementInViewport(el) {
-    var rect = el.getBoundingClientRect();
-    return (
-      rect.top >= 0 &&
-      rect.left >= 0 &&
-      rect.bottom <= (window.innerHeight || document.documentElement.clientHeight) &&
-      rect.right <= (window.innerWidth || document.documentElement.clientWidth)
-    );
-  }
 
-  var items = document.querySelectorAll(".timeline li");
-
-  // code for the isElementInViewport function
-
-  function callbackFunc() {
-    for (var i = 0; i < items.length; i++) {
-      if (isElementInViewport(items[i])) {
-        items[i].classList.add("in-view");
-      }
-    }
-  }
-
-  window.addEventListener("load", callbackFunc);
-  window.addEventListener("scroll", total);
-  window.addEventListener("scroll", callbackFunc);
-  
-  var countDownDate = new Date("Jul 16, 2021 00:00:00").getTime();
-
-// Update the count down every 1 second
-var x = setInterval(function() {
-
-  // Get today's date and time
-  var now = new Date().getTime();
-
-  // Find the distance between now and the count down date
-  var distance = countDownDate - now;
-
-  // Time calculations for days, hours, minutes and seconds
-  var days = Math.floor(distance / (1000 * 60 * 60 * 24));
-  var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-  var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-  var seconds = Math.floor((distance % (1000 * 60)) / 1000);
-
-  // Display the result in the element with id="demo"
-if(days==0){
-  document.getElementById("demo").innerHTML = hours + "h "
-  + minutes + "m " + seconds + "s ";}else{
-document.getElementById("demo").innerHTML = days + "G " + hours + "h "
-  + minutes + "m " + seconds + "s ";}
-
-  // If the count down is finished, write some text
-  if (distance < 0) {
-    clearInterval(x);
-    document.getElementById("demo").innerHTML = "Il Matrimonio è oggi!!!!";
-  }
-}, 1000);
 
 </script>
 
