--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -600,6 +600,7 @@
 
     $("#schermata_caricamento").hide();
 	$("#time").hide();
+	callbackFunc();
   });
 function scrollFunction() {
     $("#time").show();
