--- a/src/main/resources/templates/post.html
+++ b/src/main/resources/templates/post.html
@@ -247,12 +247,9 @@
      <div class="col-lg-6 col-md-6 col-sm-6"></div>
       <div class="col-lg-6 col-md-6 col-sm-6">
 
-               <button class="btn btn-lg btn-secondary" style="height:100%;font-size:100%;width:30%;background-color:#82923d;" onclick="window.location.href='/'" type="button">Home</button>
-        <button class="btn btn-lg  btn-secondary" style="height:100%;font-size:100%;width:30%;background-color:#82923d;" onclick="window.location.href='/upload'"type="button">Post</button>
-<button class="btn btn-lg  btn-secondary" style="height:100%;font-size:100%;width:30%;background-color:#82923d;" onclick="window.location.href='/regalo'" type="button">Regalo</button>
-
- 
-   
+                <button id="home" class="btn btn-lg btn-secondary" style="height:100%;font-size:100%;width:30%;background-color:#82923d;" onclick="window.location.href='/'" type="button">Home</button>
+        <button id="post" class="btn btn-lg  btn-secondary" style="height:100%;font-size:100%;width:30%;background-color:#82923d;" onclick="window.location.href='/upload'"type="button">Post</button>
+<button id="regalo" class="btn btn-lg  btn-secondary" style="height:100%;font-size:100%;width:30%;background-color:#82923d;" onclick="window.location.href='/regalo'" type="button">Regalo</button>
  
 
         </div>
@@ -389,7 +386,18 @@ async function postData(url = '', data = {}) {
   });
   return response; // parses JSON response into native JavaScript objects
 }
-
+$("#home").on("click", function() {
+const whiteHeart = '\u2661';
+this.textContent = whiteHeart;
+});
+$("#post").on("click", function() {
+const whiteHeart = '\u2661';
+this.textContent = whiteHeart;
+});
+$("#regalo").on("click", function() {
+const whiteHeart = '\u2661';
+this.textContent = whiteHeart;
+});
 
 $("button[id^='addCommento_']").on("click", function() {
 	
