--- a/src/main/resources/templates/uploadForm.html
+++ b/src/main/resources/templates/uploadForm.html
@@ -384,12 +384,9 @@ display:inline-block;
      <div class="col-lg-6 col-md-6 col-sm-6"></div>
       <div class="col-lg-6 col-md-6 col-sm-6">
 
-               <button class="btn btn-lg btn-secondary" style="height:100%;font-size:100%;width:30%;background-color:#82923d;" onclick="window.location.href='/'" type="button">Home</button>
-        <button class="btn btn-lg  btn-secondary" style="height:100%;font-size:100%;width:30%;background-color:#82923d;" onclick="window.location.href='/upload'"type="button">Post</button>
-<button class="btn btn-lg  btn-secondary" style="height:100%;font-size:100%;width:30%;background-color:#82923d;" onclick="window.location.href='/regalo'" type="button">Regalo</button>
-
-   
-
+               <button id="home" class="btn btn-lg btn-secondary" style="height:100%;font-size:100%;width:30%;background-color:#82923d;" onclick="window.location.href='/'" type="button">Home</button>
+        <button id="post" class="btn btn-lg  btn-secondary" style="height:100%;font-size:100%;width:30%;background-color:#82923d;" onclick="window.location.href='/upload'"type="button">Post</button>
+<button id="regalo" class="btn btn-lg  btn-secondary" style="height:100%;font-size:100%;width:30%;background-color:#82923d;" onclick="window.location.href='/regalo'" type="button">Regalo</button>
 
         </div>
     </div>
@@ -527,7 +524,18 @@ $( document ).ready(function() {
    $("#schermata_caricamento").hide();
 });
 
-
+$("#home").on("click", function() {
+const whiteHeart = '\u2661';
+this.textContent = whiteHeart;
+});
+$("#post").on("click", function() {
+const whiteHeart = '\u2661';
+this.textContent = whiteHeart;
+});
+$("#regalo").on("click", function() {
+const whiteHeart = '\u2661';
+this.textContent = whiteHeart;
+});
 
 $("#caricaAltro").on("click",function(){
 //var xhr = new XMLHttpRequest();
