--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -596,14 +596,19 @@
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 <script>
+var flag = false;
   $(document).ready(function() {
 
     $("#schermata_caricamento").hide();
-	$("#time").hide();
+	//$("#time").hide();
+  $(document).scrollTop($(document).height());
 
-
-
+flag=true;
+$(document).scrollTop(0);
   });
+
+if(flag){$(document).scrollTop($(document).height());flag=false
+$(document).scrollTop(0);}
 function scrollFunction() {
     $("#time").show();
 }
