--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -601,7 +601,7 @@ var flag = false;
 var width= $( window ).width();
 var width2= $( document ).width();
     $("#schermata_caricamento").hide();
-	//$("#time").hide();
+	$("#time").hide();
   if(width<1000){
 
 if(width>=width2){
