--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -612,12 +612,23 @@ if(width>=width2){
 
   });
 
+function dimensioni(){
+var width= $( window ).width();
+var width2= $( document ).width();
+   
+  if(width<1000){
 
+if(width>=width2){
+	$('body').css('width', width+"px");}else{
+	$('body').css('width', width2+"px");}
+ }
+}
 function scrollFunction() {
     $("#time").show();
 }
 
 function total() {
+dimensioni();
    scrollFunction();
 callbackFunc();
 }
