--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -622,8 +622,8 @@ function scrollFunction() {
     $("#time").show();
 }
 
-function total(flag) {
-
+function total() {
+dimensioni()
    scrollFunction();
 callbackFunc();
 
