--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -600,7 +600,7 @@ var flag = false;
   $(document).ready(function() {
 
     $("#schermata_caricamento").hide();
-	$("#time").hide();
+	//$("#time").hide();
   
  
 
@@ -623,7 +623,7 @@ function scrollFunction() {
 }
 
 function total() {
-dimensioni()
+
    scrollFunction();
 callbackFunc();
 
@@ -667,8 +667,8 @@ window.addEventListener('touchstart', function(e){
   }
 var flag2 = true
   //window.addEventListener("load", callbackFunc);
-  window.addEventListener("scroll", total());
-  //window.addEventListener("scroll", callbackFunc);
+  window.addEventListener("scroll", total);
+  window.addEventListener("scroll", callbackFunc);
   
   var countDownDate = new Date("Jul 16, 2021 00:00:00").getTime();
 
