--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -609,13 +609,12 @@ var flag = false;
 
 function dimensioni(){
 var width= $( window ).width();
-var width2= $( document ).width();
+//var width2= $( document ).width();
    
   if(width<1000){
 
-if(width>=width2){
-	$('body').css('width', width+"px");}else{
-	$('body').css('width', width2+"px");}
+
+	$('body').css('width', width+"px");}
  }
 }
 function scrollFunction() {
