--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -614,7 +614,7 @@ var width= $( window ).width();
   if(width<1000){
 
 
-	$('body').css('width', width+"px");}
+	$('body').css('width', width+"px");
  }
 }
 function scrollFunction() {
