--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -608,13 +608,13 @@ var flag = false;
   });
 
 function dimensioni(){
-var width= $( window ).width();
-//var width2= $( document ).width();
+//var width= $( window ).width();
+var width2= $( document ).width();
    
-  if(width<1000){
+  if(width2<1000){
 
 
-	$('body').css('width', width+"px");
+	$('body').css('width', width2+"px");
  }
 }
 function scrollFunction() {
