--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -600,7 +600,7 @@ var flag = false;
   $(document).ready(function() {
 
     $("#schermata_caricamento").hide();
-	$("#time").hide();
+	//$("#time").hide();
   
  if ((screen.width>=1024)) {
 		$('body').css('width', "130vw");
