--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -415,8 +415,15 @@
             </div>
 
           </div>
-<br/>
-<br/>
+<div class="row">
+
+
+	<div class="col-lg-1"></div>
+            <div class="col-lg-10">
+              <h3>"L'amore è quella cosa che tu sei da una parte e lei dal''altra eppure vi sovrapponete cosi perfettamente che siete uno e non due.E chi guarda da una parte  e poi dall'altra, cercando il due e non l'uno,resta stupito, perchè anche lontani il vostro spazio e la vostra anima non si possono dividere con niente."</h3>
+            </div>
+<div class="col-lg-1"></div>
+          </div>
  <div class="row">
             <div class="col-lg-2 col-md-2 col-sm-2">
               <img src="cuore.png" id="cuore1" class="ribbon" />
