--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -418,11 +418,11 @@
 <div class="row">
 
 
-	<div class="col-lg-1"></div>
-            <div class="col-lg-10">
+	<div class="col-lg-1 col-md-1 col-sm-1"></div>
+            <div class="col-lg-10 col-md-10 col-sm-10">
               <h1>"L'amore è quella cosa che tu sei da una parte e lei dal''altra eppure vi sovrapponete cosi perfettamente che siete uno e non due.E chi guarda da una parte  e poi dall'altra, cercando il due e non l'uno,resta stupito, perchè anche lontani il vostro spazio e la vostra anima non si possono dividere con niente."</h1>
             </div>
-<div class="col-lg-1"></div>
+<div class="col-lg-1 col-md-1 col-sm-1"></div>
           </div>
  <div class="row">
             <div class="col-lg-2 col-md-2 col-sm-2">
@@ -610,7 +610,7 @@ var flag = false;
 	//$("#time").hide();
   var width= $( window ).width();
  if (width<1024) {
-		$('body').css('width', "150vw");
+		$('body').css('width', "160vw");
 
                 //inserisci qui altre azioni o script a seconda delle esigenze		
 
@@ -626,7 +626,7 @@ var width= $( window ).width();
   if(width<1000){
 
 
-	$('body').css('width', "150vw");
+	$('body').css('width', "160vw");
  }
 }
 function scrollFunction() {
